2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post release and post branch bump to 2.25.0

======== 2.24.1 ===============================================================

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.24.1

======== 2.24.0 ===============================================================

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.24.0.

2008-09-13  Patryk Zawadzki  <patrys@pld-linux.org>

	* baobab/data/baobab.desktop.in.in: add Filesystem category.
	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
	change category to Office;Dictionary.
	* logview/gnome-system-log.desktop.in.in: drop X-Red-Hat-Base
	(#552054).

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-release bump to 2.23.93

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	* NEWS:
	* README:
	* configure.ac: Release 2.23.92.

2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: Drop libglade dependency from
	gnome-screenshot (#549700).

2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac: Post-release bump to 2.23.91

2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.ac:
	* README:
	* NEWS: Release 2.23.90.

2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>

	* Makefile.am: Remove files from EXTRA_DIST, for usage with
	new intltool.

2008-08-25  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 549033 – Drop hard dependency on X, use Gdk instead (Cosimo
	Cecchi)

	* configure.ac: Fix the dependencies check for gnome-screenshot.

	* gnome-screenshot/screenshot-utils.[ch]: Drop the usage of
	X11 API wherever is possible and use GDK instead. We still need
	to use XShapeGetRectangles because GDK doesn't have a similar
	API.

	* gnome-screenshot/gnome-screenshot.c:
	(finish_prepare_screenshot): Update for the new internal API changes.

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>
