@@ -1,3 +1,10 @@
+2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* Makefile.am:
+	* gnome-screenshot.c: (display_help), (create_screenshot_frame),
+	(load_options), (main):
+	Drop libgnomeui dependency (#557169).
+
 2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gnome-screenshot.c:
