@@ -1,3 +1,8 @@
+2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* configure.ac: Bump GTK+ requirement to 2.14.0.
+	Drop libgnomeui dependency from gnome-screenshot (#557169).
+
 2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* configure.ac: Post release and post branch bump to 2.25.0
